--- a/parent-vue/package.json
+++ b/parent-vue/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "single-spa": "^5.9.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
